Chore/migrate to spring boot 4 (#1550)
* chore: migrate to spring boot 4 (wip)

* chore: migrate to spring boot 4 (wip) - back to jackson 2

* chore: upgrade libraries to spring boot 4

sqs is not supported yet. requires update to io-awspring-cloud

* chore: cleanup

* chore: update library version management

* chore: update dependencies

* chore(sqs): disable plugin while no update is available

* chore(jms): update broker configuration

* fix(core): fix MessageDto after rebase

* fix(core): fix HeaderValueSerializer

* chore: resolve deprecations for org.springframework.lang.Nullable

* chore: resolve deprecations for jspecify